HSEARCH-4124 Add explicit add-opens for Weld proxies in integration tests
Instead of allowing illegal accesses.

Signed-off-by: Yoann Rodière <yoann@hibernate.org>